--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     environment:
       MYSQL_DATABASE: db_workshop
       MYSQL_ROOT_USER: root      
-      MYSQL_ROOT_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: 123456
     volumes:
       - db-data:/var/lib/mysql
     networks:
